--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
   <div class="header-text">
     <p>UI/UX Designer</p>
-    <h1> Hello, <span>I'm Corey</span><br>from Portland,OR</h1>
+    <h1> Hi, <span>I'm Corey</span><br>from Portland,OR</h1>
   </div>
 </div>
 
