--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
   </div>
 </div>
 
+<div id="mySkills">
+  <div class="container">
+    <div class="row">
+      <div class="about-col-1">
+        <img src="NOT YET">
+    </div>
+    <div class="about-col-2">
+      <h1>About me</h1>
+    </div>
+
+  </div>
+
+
 <!--contact-->
 <div id="footer">
     <h1 class="sub-title">Contact Me</h1>
