--- a/index.html
+++ b/index.html
@@ -25,17 +25,92 @@
   </div>
 </div>
 
-<div id="mySkills">
+<!--mySkills-->
+
+<div id="about">
   <div class="container">
     <div class="row">
       <div class="about-col-1">
-        <img src="NOT YET">
+        <img src="images/IMG_2834.JPG">
     </div>
     <div class="about-col-2">
-      <h1>About me</h1>
+      <h1 class="sub-title">About me</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <span>
+        Orci porta non pulvinar neque laoreet. </span>
+        Nunc eget lorem dolor sed. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. 
+        Dignissim cras tincidunt lobortis feugiat vivamus at</p>
+
+        <div class="tab-titles">
+          <p class="tab-links active-link">About</p>
+          <p class="tab-links">Resume</p>
+          <p class="tab-links">Work</p>
+        </div>
+        <div class="tab-contents">
+          <ul>
+            <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
+            <li><span>Web Development</span><br>Web App Development</li>
+            <li><span>App Development</span><br>Building Android/ iOS Apps</li>
+          </ul>
+        </div>
+
+        <div class="tab-contents">
+          <ul>
+            <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
+            <li><span>Web Development</span><br>Web App Development</li>
+            <li><span>App Development</span><br>Building Android/ iOS Apps</li>
+          </ul>
+        </div>
+
+        <div class="tab-contents">
+          <ul>
+            <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
+            <li><span>Web Development</span><br>Web App Development</li>
+            <li><span>App Development</span><br>Building Android/ iOS Apps</li>
+          </ul>
+        </div>
     </div>
 
   </div>
+<!--mySkills-->
+
+
+<!--myWork-->
+
+<div class="myWork">
+  <div class="container">
+    <h1 class="sub-title">My Work</h1>
+    <div class="work-list">
+      <div>
+        <h2>Web Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <a href="#">Learn more</a>
+      </div>
+      <div>
+        <h2>UX Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <a href="#">Learn more</a>
+      </div>
+      <div>
+        <h2>App Design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <a href="#">Learn more</a>
+      </div>
+
+
+
+
+    </div>
+  </div>
+</div>
+
+
+
+<!--myWork-->
+
 
 
 <!--contact-->
@@ -47,5 +122,6 @@
   </div>
 </div>
 </body>
-    
+    <!--contact-->
+
       </html>
