--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div>
         <h2>App Design</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          sed do eiusmod tempor incididunnnnt ut labore et dolore magna aliqua</p>
           <a href="#">Learn more</a>
       </div>
 
